# fastapi-blog

./: README.md  alembic.ini  blog.sqlite  initial_data.py  main.py  populatedb.py  pyproject.toml  requirements.txt
alembic/: env.py
api/: blog.py  main.py  user.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/: app-sidebar.tsx
core/: auth.py  blog.py  user.py
database/: configuration.py  session.py
models/: models.py
routers/: auth.py
schema/: hash.py  oa2.py  schemas.py  token.py
tests/: test_main.py
