[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["adaniel105 <dakinola18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.14.0"
bcrypt = "4.2.1"
fastapi = "0.115.6"
mako = "1.3.8"
passlib = "1.7.4"
psycopg2-binary = "2.9.10"
pydantic = "2.10.3"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.19"
requests = "2.32.3"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
uvicorn = "0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
